--- a/witcards/style.css
+++ b/witcards/style.css
@@ -14,6 +14,9 @@ html, body {
 .container {
   width: 80%;
   margin:auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .card {
